--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
 
 	<groupId>ca.mcgill</groupId>
 	<artifactId>Sholl_Analysis</artifactId>
-	<version>3.4.1-SNAPSHOT</version>
+	<version>3.4.1</version>
 
 	<name>Sholl Analysis</name>
-	<description>An ImageJ 1.x plugin performing bitmap Sholl analysis</description>
+	<description>An ImageJ 1.x plugin that uses automated Sholl to perform neuronal morphometry directly from bitmap images</description>
 
 	<dependencies>
 		<dependency>
