Use short form of URL of documentation page

--- a/pom.xml
+++ b/pom.xml
@@ -65,5 +65,5 @@
 		<url>https://github.com/tferr/ASA</url>
 	</scm>
 
-	<url>http://fiji.sc/Sholl_Analysis</url>
+	<url>http://fiji.sc/Sholl</url>
 </project>
