Import fiji.lib (required for fiji.Debug in SHA: 55b610f)

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
 			<groupId>net.imagej</groupId>
 			<artifactId>ij</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>fiji-lib</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
