--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>ij</artifactId>
+			<version>1.49t</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
