--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -2,11 +2,12 @@
 
 # Description:
 # Quantitative Sholl analysis of segmented arbors
-# http://fiji.sc/Sholl_Analysis
+# http://imagej.net/Sholl_Analysis
 # https://github.com/tferr/ASA
 # Author: Tiago Ferreira
 # Requires: ImageJ 1.49
 
-Analyze, "Sholl Analysis...", Sholl_Analysis
-File>Open Samples, "ddaC Neuron (84K)", Sholl_Utils("sample")
-Help>About Plugins, "About Sholl Analysis...", Sholl_Utils("about")
+Analyze>Sholl, "Sholl Analysis...", sholl.Sholl_Analysis
+Analyze>Sholl, "Metrics & Options...", sholl.Options
+File>Open Samples, "ddaC Neuron (84K)", sholl.Sholl_Utils("sample")
+Help>About Plugins, "About Sholl Analysis...", sholl.Sholl_Utils("about")
