--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,9 @@
 			<groupId>sc.fiji</groupId>
 			<artifactId>fiji-lib</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>scijava-common</artifactId>
+		</dependency>
 	</dependencies>
 </project>
