Add SNT as dependency and analyze traces directly! Finally! It took only 2 years to get the time to do it!

--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,9 @@
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-common</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>Simple_Neurite_Tracer</artifactId>
+		</dependency>
 	</dependencies>
 </project>
