--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -9,6 +9,7 @@
 
 Analyze>Sholl, "Sholl Analysis...", sholl.Sholl_Analysis
 Analyze>Sholl, "Sholl Analysis (Tabular Data)...", sholl.Sholl_Analysis("csv")
+Analyze>Sholl, "Sholl Analysis (SWC/Traces)...", sholl.Call_SNT("")
 Analyze>Sholl, "Metrics & Options...", sholl.Options
 File>Open Samples, "ddaC Neuron (84K)", sholl.Sholl_Utils("sample")
 Help>About Plugins, "About Sholl Analysis...", sholl.Sholl_Utils("about")
