--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -6,7 +6,7 @@
 # https://github.com/tferr/ASA
 # Author: Tiago Ferreira
 
-Analyze>Sholl, "Sholl Analysis...", sholl.Sholl_Analysis
+Analyze>Sholl, "Sholl Analysis...", sholl.Sholl_Analysis("image")
 Analyze>Sholl, "Sholl Analysis (Tracings)...", sholl.Call_SNT("")
 Analyze>Sholl, "Sholl Analysis (Existing Profile)...", sholl.Sholl_Analysis("csv")
 Analyze>Sholl, "Metrics & Options...", sholl.Options
