--- a/pom.xml
+++ b/pom.xml
@@ -131,5 +131,9 @@
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej-legacy</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2</artifactId>
+		</dependency>
 	</dependencies>
 </project>
