--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
 jdk: oraclejdk8
 branches:
-  only: master
+  only:
+  - master
+  - "/.*-[0-9]+\\..*/"
 install: true
 script: ".travis/build.sh"
-after_success: ".travis/notify.sh Travis-Success"
-after_failure: ".travis/notify.sh Travis-Failure"
 env:
   global:
   - secure: GZ4KzecvJukeXrfLW/qZPm18mnB0W33uP8dRE+qbmzT2PDgLU+cE6iRPPA6raaHkB7DhOItnoVLK7fsmABa+WfspSkQmMl03ZCkwl975Xn2+7skmpC58yLKRURyOvBP0RkIM/SUkP6xcKT8MF21yVq8bTEbYx+OnVxCMHpjq8GU=
