--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -6,8 +6,8 @@
 # https://github.com/tferr/ASA
 # Author: Tiago Ferreira
 
-Analyze>Sholl, "Sholl Analysis...", sholl.Sholl_Analysis("image")
-Analyze>Sholl, "Sholl Analysis (Existing Profile)...", sholl.Sholl_Analysis("csv")
-Analyze>Sholl, "Metrics & Options...", sholl.Options
+Analyze>Sholl>Deprecated, "Sholl Analysis...", sholl.Sholl_Analysis("image")
+Analyze>Sholl>Deprecated, "Sholl Analysis (Existing Profile)...", sholl.Sholl_Analysis("csv")
+Analyze>Sholl>Deprecated, "Metrics & Options...", sholl.Options
 File>Open Samples, "ddaC Neuron (84K)", sholl.Sholl_Utils("sample")
 Help>About Plugins, "About Sholl Analysis...", sholl.Sholl_Utils("about")
