--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,8 @@
 
 	<mailingLists>
 		<mailingList>
-			<name>ImageJ Forum</name>
-			<archive>https://forum.imagej.net/</archive>
+			<name>Image.sc Forum</name>
+			<archive>https://forum.image.sc/tags/sholl-analysis</archive>
 		</mailingList>
 	</mailingLists>
 
