Allow tables, plots, and mask to be saved from prompt
While at it:
- add more tooltip descriptions to prompt 
- Workaround a ClassCastException when using the scroll-wheel on value sliders

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,10 @@
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-table</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>scijava-plugins-io-table</artifactId>
+		</dependency>
 
 		<!-- Other dependencies -->
 		<dependency>
