Exclude sample image (now registered using SNT)

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -9,5 +9,5 @@
 #Analyze>Sholl>Deprecated, "Sholl Analysis...", sholl.Sholl_Analysis("image")
 #Analyze>Sholl>Deprecated, "Sholl Analysis (Existing Profile)...", sholl.Sholl_Analysis("csv")
 #Analyze>Sholl>Deprecated, "Metrics & Options...", sholl.Options
-File>Open Samples, "ddaC Neuron (84K)", sholl.Sholl_Utils("sample")
+#File>Open Samples, "ddaC Neuron (84K)", sholl.Sholl_Utils("sample")
 #Help>About Plugins, "About Sholl Analysis...", sholl.Sholl_Utils("about")
